# TiagoShopAssistant

./: .gitignore  .gitmodules  README.md  create_node.py  create_service.py  frames_2025-06-23_13.35.44.gv  frames_2025-06-24_19.48.54.gv  full_build_output.txt  my_map_from_gazebo.pgm  my_map_from_gazebo.yaml  remove_node.py  remove_service.py  requirements.txt  start_project.bash
src/tiago/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/tiago/launch/: amcl_bringup.launch.py  tiago_navigation.launch.py
src/tiago/msg/: ConversationStatus.msg  Customer.msg  Product.msg  ProductQuery.msg  Staff.msg  StaffQuery.msg  VisionObjectDetection.msg  VisionPersonDetection.msg
src/tiago/res/: create_shop_inventory.py  database.db  map.map  modify_and_save_map.py  products.csv  shop_inventory.json  staff.csv
src/tiago/srv/: AddThreeInts.srv  CheckOccupancy.srv  ExtractRelevantProducts.srv  ExtractRelevantStaff.srv  GetAreaAtPoint.srv  GetAreaLocation.srv  GetAreaPosition.srv  GetCustomerInformation.srv  GetMapInfo.srv  GetProductLocation.srv  GetStaffLocation.srv  HRICommand.srv  PathPlannerCommand.srv  UpdateCustomerInformation.srv  UpdateProductInformation.srv  UpdateProductLocation.srv  UpdateProductPosition.srv  UpdateStaffInformation.srv  UpdateStaffLocation.srv  UpdateStaffPosition.srv
src/tiago/tiago/: __init__.py  add_three_ints_server.py  controller.py  conversation_node.py  conversation_simulator.py  database.py  database_interface.py  database_loader_node.py  map_provider.py  path_planner.py  reasoning_node.py  reasoning_node_2.py  vision_controller.py
src/tiago/tiago/config/: amcl_params.yaml
src/tiago/tiago/launch/: mapping_only.launch.py
src/tiago/tiago/lib/: april_tag_generator.py  assistant.py  database.py  entities.py  interface.py  managers.py  orm_entities.py  parser.py  test_webcam.py
src/tiago/tiago/lib/assets/staff/: model.config  model.sdf
src/tiago/tiago/lib/database/: database.py  entities.py  interface.py  managers.py  orm_entities.py  products.csv  staff.csv
src/tiago/tiago/lib/map/: geometry.py  map.py  map_display.py
src/tiago/tiago/lib/path/: astar_path_planner.py  my_map.pgm
src/tiago/tiago/lib/ros_utils/: coordinates_system.py  database_service_client.py  msg_converters.py
src/tiago/tiago/maps/: my_map.pgm  my_map.yaml
src/tiago/tiago/models/: cash_desk.sdf
src/tiago/tiago/models/cash_desk/: model.config  model.sdf
src/tiago/tiago/models/customer_antonello/: model.config  model.sdf
src/tiago/tiago/models/customer_antonello/materials/scripts/: customer.material
src/tiago/tiago/models/customer_emanuele/: model.config  model.sdf
src/tiago/tiago/models/customer_emanuele/materials/scripts/: customer.material
src/tiago/tiago/models/customer_niccolo/: model.config  model.sdf
src/tiago/tiago/models/customer_niccolo/materials/scripts/: customer.material
src/tiago/tiago/models/customer_person/: model.config  model.sdf
src/tiago/tiago/models/customer_person/materials/scripts/: customer.material
src/tiago/tiago/models/red_box_baseball/: model.config  model.sdf
src/tiago/tiago/models/red_box_baseball/materials/scripts/: tag.material
src/tiago/tiago/models/red_box_baseball_bat/: model.config  model.sdf
src/tiago/tiago/models/red_box_baseball_bat/materials/scripts/: tag.material
src/tiago/tiago/models/red_box_basketball/: model.config  model.sdf
src/tiago/tiago/models/red_box_basketball/materials/scripts/: tag.material
src/tiago/tiago/models/red_box_basketball_hoop/: model.config  model.sdf
src/tiago/tiago/models/red_box_basketball_hoop/materials/scripts/: tag.material
src/tiago/tiago/models/red_box_soccer_ball/: model.config  model.sdf
src/tiago/tiago/models/red_box_soccer_ball/materials/scripts/: tag.material
src/tiago/tiago/models/red_box_soccer_cleats/: model.config  model.sdf
src/tiago/tiago/models/red_box_soccer_cleats/materials/scripts/: tag.material
src/tiago/tiago/models/red_box_tennis_ball/: model.config  model.sdf
src/tiago/tiago/models/red_box_tennis_ball/materials/scripts/: tag.material
src/tiago/tiago/models/red_box_tennis_racket/: model.config  model.sdf
src/tiago/tiago/models/red_box_tennis_racket/materials/scripts/: tag.material
src/tiago/tiago/models/shelf/: model.config  model.sdf
src/tiago/tiago/models/staff_federico/: model.config  model.sdf
src/tiago/tiago/models/staff_federico/materials/scripts/: staff.material
src/tiago/tiago/models/staff_leonardo/: model.config  model.sdf
src/tiago/tiago/models/staff_lorenzo/: model.config  model.sdf
src/tiago/tiago/models/staff_person/: model.config  model.sdf
src/tiago/tiago/rviz/: path_planning.rviz
src/tiago/tiago/worlds/: my_shop.world  verifica_muri.world
(+4 files in other folders)
